Bug 399718 - "Flatpak" not listed in the sources page if there are no repositories
Summary: "Flatpak" not listed in the sources page if there are no repositories
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (show other bugs)
Version: 5.14.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-12 14:07 UTC by francisco_t
Modified: 2018-10-15 14:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description francisco_t 2018-10-12 14:07:06 UTC
SUMMARY


STEPS TO REPRODUCE
1. Fresh install of KDE neon from 2018/10/04 with 5.14.0
2. Discover don't show flatpak in the preferences.
3. Plasma-discover-flatpak is installed.


ADDITIONAL INFORMATION

Workaround is adding a repositorie.
Comment 1 Rik Mills 2018-10-12 14:51:42 UTC
Same issue on 5.14.0 test builds for Kubuntu 18.10, so this seems to be a general bugs rather that distro specific.

It is also a regression since the 5.13.5 release, where even if a Flatpak repo/remote was not available, the Flatbak backend would show in the Discover settings page (with options to add repo/remotes).
Comment 2 Aleix Pol 2018-10-15 14:52:31 UTC
Git commit 3f17292dd3c1940dbcc5e585ae97bf7ee350095b by Aleix Pol.
Committed on 15/10/2018 at 14:51.
Pushed by apol into branch 'Plasma/5.14'.

flatpak: make sure it's listed in the sources page

M  +4    -4    discover/qml/SourcesPage.qml
M  +18   -1    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.cpp
M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.h
M  +6    -0    libdiscover/resources/SourcesModel.cpp
M  +2    -1    libdiscover/resources/SourcesModel.h

https://commits.kde.org/discover/3f17292dd3c1940dbcc5e585ae97bf7ee350095b