flatpak: make sure it's listed in the sources page

BUG: 399718